--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
  * Copyright 2011-2019 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+*,
+*:focus {
+  outline: none
+}
+
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -2275,18 +2280,37 @@ pre code {
   border: 0;
 }
 
+.form-group {
+  position: relative;
+}
+
+.form-group label {
+  position: absolute;
+  cursor: text;
+  z-index: 2;
+  top: 13px;
+  left: 12px;
+  font-size: 15px;
+  font-weight: bold;
+  background: transparent;
+  padding: 0 10px;
+  color: #999;
+  transition: all .3s ease
+}
+
 .form-control {
   display: block;
+  background: transparent;
+  position: relative;
+  border: solid 1px #ccc;
+  transition: all .3s ease;
   width: 100%;
   height: calc(1.5em + 0.75rem + 2px);
   padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-  font-weight: 400;
+  font-size: 1rem !important;
   line-height: 1.5;
   color: #495057;
-  background-color: #fff;
   background-clip: padding-box;
-  border: 1px solid #ced4da;
   border-radius: 0.25rem;
   -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -2315,6 +2339,14 @@ pre code {
   outline: 0;
   -webkit-box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+}
+
+.form-group input:focus+label,
+.form-group input:valid+label,
+.form-group textarea:focus+label {
+  font-size: 13px;
+  top: -10px;
+  background-color: #000000bd !important;
 }
 
 .form-control::-webkit-input-placeholder {
@@ -2418,11 +2450,9 @@ select.form-control[multiple] {
 
 textarea.form-control {
   height: auto;
+  margin-bottom: 20px;
 }
 
-.form-group {
-  margin-bottom: 1rem;
-}
 
 .form-text {
   display: block;
@@ -12016,7 +12046,6 @@ h5,
 
 .ftco-navbar-light.scrolled .navbar-toggler {
   border: none;
-  color: rgba(0, 0, 0, 0.5) !important;
   border-color: rgba(0, 0, 0, 0.5) !important;
   cursor: pointer;
   text-transform: uppercase;
@@ -12644,6 +12673,7 @@ h5,
 .ftco-about .img-about .img {
   display: block;
   width: 100%;
+  height: 500px;
   position: relative;
   z-index: 1;
 }
@@ -13015,8 +13045,8 @@ h5,
 
 .form-control {
   height: 52px !important;
-  background: #fff !important;
-  color: #000000 !important;
+  background: #000 !important;
+  color: #fff !important;
   font-size: 18px;
   border-radius: 5px;
   -webkit-box-shadow: none !important;
@@ -13025,7 +13055,7 @@ h5,
 
 .form-control:focus,
 .form-control:active {
-  border-color: #000000;
+  border-color: #616161 !important;
 }
 
 textarea.form-control {
@@ -13314,6 +13344,7 @@ textarea.form-control {
 .mfp-with-zoom .mfp-container,
 .mfp-with-zoom.mfp-bg {
   opacity: 0;
+  backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
   -webkit-transition: all 0.3s ease-out;
   -moz-transition: all 0.3s ease-out;
@@ -13750,7 +13781,7 @@ textarea.form-control {
   background: black;
 }
 
-.search-form .form-group {
+.search-form {
   position: relative;
   margin-bottom: 0;
 }
@@ -14011,9 +14042,11 @@ textarea.form-control {
   .progressbar {
     transform: scale(0.75);
   }
+
   .progressbar-text {
     font-size: 50px;
   }
+
   .progressbar-label {
     margin-top: -10px;
   }
